SystemUI: Add caffeine QS tile
Author: Keith Mok <kmok@cyngn.com>
Date:   Thu Feb 4 11:10:22 2016 -0800

    SystemUI: Add caffeine qs tile

    Change-Id: I5d4aa97ae63fc0bcc40f0fa7d9305efbba091029

Author: chillger <alexander.loskutov@gmail.com>
Date:   Fri May 22 13:16:00 2020 +0200

    SystemUI: Long press Caffeine for infinite duration

    Change-Id: Ic49539dcda6d7d6b1dab362eb8ec168d2ec65b07

Change-Id: I0b9a498285930cc397b7c4d20ddec3f447e6d332

--- a/packages/SystemUI/res/values/fuse_strings.xml
+++ b/packages/SystemUI/res/values/fuse_strings.xml
@@ -36,4 +36,9 @@
 
     <!-- Title of statusbar tuner -->
     <string name="status_bar_icons">Status bar icons</string>
+
+    <!-- Caffeine QS tile -->
+    <string name="quick_settings_caffeine_label">Caffeine</string>
+    <string name="accessibility_quick_settings_caffeine_off">Caffeine off.</string>
+    <string name="accessibility_quick_settings_caffeine_on">Caffeine on.</string>
 </resources>
