--- a/packages/SystemUI/res/values/fuse_config.xml
+++ b/packages/SystemUI/res/values/fuse_config.xml
@@ -26,5 +26,8 @@
 
     <!-- SystemUI Google -->
     <bool name="flag_smartspace">true</bool>
+    <string name="config_systemUIFactoryComponent">org.pixelexperience.systemui.SystemUIGoogleFactory</string>
+    <string name="config_systemUIVendorServiceComponent">org.pixelexperience.systemui.GoogleServices</string>
+    
 </resources>
 
