base: AdvancedReboot: Add a button to restart SystemUI
Drawable taken from our eleven brnach

Change-Id: I0a025b31dbdf48f60dd9dd1a5c7416f06eb1b738
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

--- a/packages/SystemUI/res/values/fuse_strings.xml
+++ b/packages/SystemUI/res/values/fuse_strings.xml
@@ -27,6 +27,8 @@
     <string name="global_action_restart_download">Download</string>
     <!-- Button to restart the device into fastboot mode, within the Restart Options dialog -->
     <string name="global_action_restart_fastboot">Fastbootd</string>
+    <!-- Button to restart the device system ui, within the Restart Options dialog -->
+    <string name="global_action_reboot_systemui">SystemUI</string>
 
     <!-- Label for current user in power menu options dialog -->
     <string name="global_action_current_user">Current</string>
