--- a/core/res/res/values/fuse_config.xml
+++ b/core/res/res/values/fuse_config.xml
@@ -44,6 +44,7 @@
         <item>restart</item>
         <item>restart_recovery</item>
         <item>restart_bootloader</item>
+        <item>reboot_sysui</item>
      </string-array>
 
      <!-- List of system apps that are allowed to be locked with app lock.
