[SQUASH] base: Introduce app lock [1/3]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I83d98c75d352bfd2f4ca67438fd408f584849452
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: sushmit1 <sushmit718@gmail.com>

--- a/core/res/res/values/fuse_symbols.xml
+++ b/core/res/res/values/fuse_symbols.xml
@@ -34,4 +34,8 @@
     
     <!-- Power menu -->
     <java-symbol type="array" name="config_restartActionsList" />
+
+     <!-- App lock -->
+    <java-symbol type="string" name="unlock_application" />
+    <java-symbol type="array" name="config_appLockAllowedSystemApps" />
 </resources>
