--- a/packages/SystemUI/res/values-land/integers.xml
+++ b/packages/SystemUI/res/values-land/integers.xml
@@ -16,4 +16,9 @@
 
 <resources>
     <integer name="qs_security_footer_maxLines">1</integer>
+
+    <!-- A11 QS. -->
+    <integer name="quick_qs_panel_max_columns">4</integer>
+    <integer name="quick_settings_min_num_tiles">6</integer>
+    <integer name="quick_settings_num_columns">4</integer>
 </resources>
