--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -443,9 +443,11 @@
     <dimen name="pull_span_min">25dp</dimen>
 
     <dimen name="qs_corner_radius">28dp</dimen>
-    <dimen name="qs_tile_height">84dp</dimen>
-    <dimen name="qs_tile_margin_horizontal">8dp</dimen>
-    <dimen name="qs_tile_margin_vertical">@dimen/qs_tile_margin_horizontal</dimen>
+    <dimen name="qs_tile_height">55dp</dimen>
+    <!--notification_side_paddings + notification_content_margin_start - (qs_quick_tile_size - qs_tile_background_size) / 2 -->
+    <dimen name="qs_tile_layout_margin_side">18dp</dimen>
+    <dimen name="qs_tile_margin_horizontal">22dp</dimen>
+    <dimen name="qs_tile_margin_vertical">22dp</dimen>
     <dimen name="qs_tile_margin_top_bottom">4dp</dimen>
     <dimen name="qs_brightness_margin_top">8dp</dimen>
     <dimen name="qs_brightness_margin_bottom">24dp</dimen>
@@ -459,9 +461,9 @@
     <dimen name="qs_icon_size">20dp</dimen>
     <dimen name="qs_side_view_size">28dp</dimen>
     <dimen name="qs_label_container_margin">10dp</dimen>
-    <dimen name="qs_quick_tile_size">60dp</dimen>
+    <dimen name="qs_quick_tile_size">55dp</dimen>
     <dimen name="qs_tile_padding">12dp</dimen>
-    <dimen name="qs_tile_start_padding">16dp</dimen>
+    <dimen name="qs_tile_start_padding">17.5dp</dimen>
     <dimen name="qs_drawable_end_margin">4dp</dimen>
     <dimen name="qs_page_indicator_width">16dp</dimen>
     <dimen name="qs_page_indicator_height">8dp</dimen>
