--- a/packages/SystemUI/res/values/integers.xml
+++ b/packages/SystemUI/res/values/integers.xml
@@ -25,4 +25,9 @@
          See com.android.systemui.volume.VolumeDialogImpl.
          Value 21 corresponds to RIGHT|CENTER_VERTICAL. -->
     <integer name="volume_dialog_gravity">21</integer>
+
+    <!-- A11 QS. -->
+    <integer name="quick_qs_panel_max_columns">5</integer>
+    <integer name="quick_settings_min_num_tiles">6</integer>
+    <integer name="quick_settings_num_columns">5</integer>
 </resources>
