--- a/packages/SystemUI/res/layout/internet_connectivity_dialog.xml
+++ b/packages/SystemUI/res/layout/internet_connectivity_dialog.xml
@@ -15,13 +15,18 @@
   ~ limitations under the License.
   -->
 
-<LinearLayout
+<com.zhenxiang.blur.WindowBlurLinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/internet_connectivity_dialog"
     android:layout_width="@dimen/large_dialog_width"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:backgroundColour="?android:attr/colorBackground"
+    app:cornerRadius="@dimen/internet_dialog_corner_radius"
+    app:blurRadius="@integer/background_blur_radius"
+    app:blurBackgroundColourOpacity="@dimen/background_blur_colour_opacity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +35,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="@dimen/internet_dialog_network_layout_margin"
+        android:background="@android:color/transparent"
         android:orientation="vertical">
 
         <TextView
@@ -429,4 +435,4 @@
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+</com.zhenxiang.blur.WindowBlurLinearLayout>
