--- a/packages/SystemUI/res/layout/screen_record_dialog.xml
+++ b/packages/SystemUI/res/layout/screen_record_dialog.xml
@@ -14,10 +14,17 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhenxiang.blur.WindowBlurLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:backgroundColour="?androidprv:attr/colorSurface"
+    app:cornerRadius="?android:attr/dialogCornerRadius"
+    app:blurRadius="@integer/background_blur_radius"
+    app:blurBackgroundColourOpacity="@dimen/background_blur_colour_opacity">
 
     <!-- Scrollview is necessary to fit everything in landscape layout -->
     <ScrollView
@@ -124,4 +131,4 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</com.zhenxiang.blur.WindowBlurLinearLayout>
