--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -27,26 +27,32 @@
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="headset"
+        android:icon="@drawable/ic_statusbar_headset"
         android:title="@string/headset" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="managed_profile"
+        android:icon="@drawable/ic_statusbar_work"
         android:title="@string/status_bar_work" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="cast"
+        android:icon="@drawable/ic_statusbar_cast"
         android:title="@string/quick_settings_cast_title" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="hotspot"
+        android:icon="@drawable/ic_statusbar_hotspot"
         android:title="@string/quick_settings_hotspot_label" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="bluetooth"
+        android:icon="@*android:drawable/ic_qs_bluetooth"
         android:title="@string/quick_settings_bluetooth_label" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="zen"
+        android:icon="@drawable/ic_statusbar_do_not_disturb"
         android:title="@string/quick_settings_dnd_label" />
 
     <com.android.systemui.tuner.StatusBarSwitch
@@ -55,18 +61,22 @@
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="wifi"
+        android:icon="@drawable/ic_statusbar_wifi"
         android:title="@string/quick_settings_wifi_label" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="ethernet"
+        android:icon="@drawable/ic_statusbar_ethernet"
         android:title="@string/status_bar_ethernet" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="mobile"
+        android:icon="@drawable/ic_statusbar_mobile_network"
         android:title="@string/quick_settings_cellular_detail_title" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="airplane"
+        android:icon="@drawable/ic_statusbar_airplanemode"
         android:title="@string/status_bar_airplane" />
 
     <com.android.systemui.tuner.StatusBarSwitch
@@ -79,6 +89,7 @@
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="alarm_clock"
+        android:icon="@drawable/ic_statusbar_alarm"
         android:title="@string/status_bar_alarm" />
 
     <com.android.systemui.tuner.StatusBarSwitch
