--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -18,6 +18,9 @@
     android:key="status_bar"
     android:title="@string/status_bar_icons">
 
+    <PreferenceCategory
+    android:title="@string/category_name_icons">
+
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="rotate"
         android:title="@string/status_bar_settings_auto_rotation" />
@@ -82,14 +85,26 @@
         android:key="cameratoggle"
         android:title="@string/quick_settings_camera_label" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+    android:title="@string/category_name_battery">
+
     <com.android.systemui.tuner.BatteryPreference
         android:title="@string/battery"
         android:summary="%s"
         android:entries="@array/battery_options" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+    android:title="@string/category_name_clock">    
+
     <com.android.systemui.tuner.ClockPreference
         android:title="@string/tuner_time"
         android:summary="%s"
         android:entries="@array/clock_options" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
