--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -81,10 +81,12 @@
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="roaming"
+        android:icon="@drawable/ic_statusbar_roaming"
         android:title="@string/status_bar_roaming" />
 
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="vpn"
+        android:icon="@drawable/ic_statusbar_vpn"
         android:title="@string/status_bar_vpn" />
 
     <com.android.systemui.tuner.StatusBarSwitch
